Fix issue with the overlap video

--- a/sites/all/themes/nrb_televie/css/src/_page-soiree.scss
+++ b/sites/all/themes/nrb_televie/css/src/_page-soiree.scss
@@ -362,7 +362,12 @@
     z-index: 4;
     width: 100%;
     height: 40vh;
-    top: 40vh;
+    top: 50vh;
+
+    @media (max-width: 525px)
+    {
+      top: 40vh;
+    }
 
     .video__normal
     {
@@ -389,8 +394,14 @@
 
       .video__video
       {
-        width: 600px;
-        height: 338px;
+        width: 100%;
+        max-width: 50%;
+        height: 45vh;
+
+        @media (max-width: 885px)
+        {
+          max-width: 90%;
+        }
       }
     }
   }
@@ -444,7 +455,7 @@
       img
       {
         width: auto;
-        height: 150px;
+        height: 18vh;
       }
     }
 
